@@ -1,5 +1,8 @@
 2019-12-18  Daniel Shahaf  <danielsh@apache.org>
 
+	* 45066: Src/builtin.c, Src/exec.c, Src/params.c: internal:
+	Document forklevel, locallevel, and exit_pending.
+
 	* 45065: Src/Makefile.in: Make 'make -s' print nothing when it
 	does nothing.
 
